--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,11 @@ line-length = 79
 select = ["ALL"]
 ignore = [
     "RUF002",
+    "RUF003",
     "D203",
     "D213",
+    "TRY003",
+    "EM101",
     "D100",  # Missing module docstring
     "D104",  # Missing public package docstring
     "D105",  # Missing magic method docstring
@@ -62,4 +65,4 @@ warn_unreachable = true
 strict = true
 
 [tool.ruff.lint.per-file-ignores]
-"tests/**" = ["S101", "D101", "D102"]
+"tests/**" = ["S101", "D101", "D102", "D103", "FBT001", "PT006"]
