--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,7 +91,7 @@ disallow_untyped_decorators = true
 no_implicit_optional = true
 warn_redundant_casts = true
 warn_unused_ignores = true
-disallow_subclassing_any = False
+disallow_subclassing_any = false
 warn_no_return = true
 warn_unreachable = true
 strict = true
