--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,5 +58,6 @@ jobs:
         env:
           CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
         run: |
-          python -m pip install --upgrade codacy-coverage
-          python -m codacy_coverage report -r coverage.xml
+          bash <(curl -Ls https://coverage.codacy.com/get.sh) report \
+            -r coverage.xml \
+            -l Python
